feat: support multiple statuses and persist state

--- a/index.html
+++ b/index.html
@@ -166,14 +166,15 @@
                                 <button class="btn btn--secondary" id="bulkArchiveBtn">Archive Selected</button>
                             </div>
                         </div>
-                        
+
                         <div class="table-container">
                             <table class="contributors-table">
                                 <thead>
                                     <tr>
                                         <th><input type="checkbox" id="selectAll"></th>
                                         <th>Email</th>
-                                        <th>Status</th>
+                                        <th>Assignment</th>
+                                        <th>Result</th>
                                         <th>Date Added</th>
                                         <th>Date Assigned</th>
                                         <th>Date Completed</th>
@@ -223,7 +224,8 @@
                                 <thead>
                                     <tr>
                                         <th>Email</th>
-                                        <th>Status</th>
+                                        <th>Assignment</th>
+                                        <th>Result</th>
                                         <th>Date Added</th>
                                         <th>Date Assigned</th>
                                         <th>Date Completed</th>
@@ -258,7 +260,7 @@
                                 <thead>
                                     <tr>
                                         <th>Email</th>
-                                        <th>Final Status</th>
+                                        <th>Result</th>
                                         <th>Date Added</th>
                                         <th>Date Completed</th>
                                         <th>Date Archived</th>
