Remove dark theme and update title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GenAI Contributor Retraining Manager</title>
+    <title>Scale Training/Webinar Status Manager</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
@@ -11,7 +11,7 @@
     <div class="app">
         <header class="header">
             <div class="container">
-                <h1>GenAI Contributor Retraining Manager</h1>
+                <h1>Scale Training/Webinar Status Manager</h1>
                 <div class="header-actions">
                     <div class="project-controls">
                         <select id="projectSelect" class="form-control"></select>
@@ -22,9 +22,6 @@
                     </div>
                     <button class="btn btn--outline btn--sm" id="exportCsvBtn">
                         📁 Export CSV
-                    </button>
-                    <button class="btn btn--outline btn--sm" id="themeToggle">
-                        🌓 Toggle Theme
                     </button>
                 </div>
             </div>
