--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                         <button class="btn btn--outline btn--sm" id="addProjectBtn">➕ New</button>
                         <button class="btn btn--outline btn--sm" id="exportProjectBtn">📤 Export</button>
                         <button class="btn btn--outline btn--sm" id="importProjectBtn">📥 Import</button>
+                        <button class="btn btn--outline btn--sm" id="shareProjectBtn">🔗 Share</button>
                         <input type="file" id="importProjectFile" accept=".json" class="hidden">
                     </div>
                     <button class="btn btn--outline btn--sm" id="exportCsvBtn">
