Fix share project and add delete project option

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                         <button class="btn btn--outline btn--sm" id="exportProjectBtn">📤 Export</button>
                         <button class="btn btn--outline btn--sm" id="importProjectBtn">📥 Import</button>
                         <button class="btn btn--outline btn--sm" id="shareProjectBtn">🔗 Share</button>
+                        <button class="btn btn--outline btn--sm" id="deleteProjectBtn">🗑️ Delete</button>
                         <input type="file" id="importProjectFile" accept=".json" class="hidden">
                     </div>
                     <button class="btn btn--outline btn--sm" id="exportCsvBtn">
