--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Scale Training/Webinar Status Manager</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/lz-string@1.5.0/libs/lz-string.min.js"></script>
 </head>
 <body>
     <div class="app">
