--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
             <div class="container">
                 <button class="tab-btn active" data-tab="active">Active Contributors</button>
                 <button class="tab-btn" data-tab="daily">Daily View</button>
-                <button class="tab-btn" data-tab="archive">Archive</button>
                 <button class="tab-btn" data-tab="statistics">Statistics</button>
+                <button class="tab-btn" data-tab="archive">Archive</button>
             </div>
         </nav>
 
@@ -176,12 +176,10 @@
                                 <thead>
                                     <tr>
                                         <th><input type="checkbox" id="selectAll"></th>
-                                        <th>Email</th>
-                                        <th>Assignment</th>
-                                        <th>Result</th>
-                                        <th>Date Added</th>
-                                        <th>Date Assigned</th>
-                                        <th>Date Completed</th>
+                                        <th class="sortable" data-sort="email">Email</th>
+                                        <th class="sortable" data-sort="status">Assignment</th>
+                                        <th class="sortable" data-sort="result">Result</th>
+                                        <th class="sortable" data-sort="dateAdded">Date Added</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
@@ -231,47 +229,10 @@
                                         <th>Assignment</th>
                                         <th>Result</th>
                                         <th>Date Added</th>
-                                        <th>Date Assigned</th>
-                                        <th>Date Completed</th>
                                         <th>Actions</th>
                                     </tr>
                                 </thead>
                                 <tbody id="dailyTableBody">
-                                    <!-- Table rows will be populated by JavaScript -->
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Archive Tab -->
-                <div id="archive-tab" class="tab-content">
-                    <div class="section">
-                        <div class="section-header">
-                            <h2>Archived Contributors</h2>
-                            <div class="section-actions">
-                                <input type="text" id="archiveSearchInput" class="form-control search-input" placeholder="Search archived contributors...">
-                                <select id="archiveStatusFilter" class="form-control">
-                                    <option value="">All Statuses</option>
-                                    <option value="passed">Passed</option>
-                                    <option value="failed">Failed</option>
-                                </select>
-                            </div>
-                        </div>
-                        
-                        <div class="table-container">
-                            <table class="contributors-table">
-                                <thead>
-                                    <tr>
-                                        <th>Email</th>
-                                        <th>Result</th>
-                                        <th>Date Added</th>
-                                        <th>Date Completed</th>
-                                        <th>Date Archived</th>
-                                        <th>Actions</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="archiveTableBody">
                                     <!-- Table rows will be populated by JavaScript -->
                                 </tbody>
                             </table>
@@ -319,6 +280,41 @@
                                     <canvas id="weeklySummaryChart"></canvas>
                                 </div>
                             </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Archive Tab -->
+                <div id="archive-tab" class="tab-content">
+                    <div class="section">
+                        <div class="section-header">
+                            <h2>Archived Contributors</h2>
+                            <div class="section-actions">
+                                <input type="text" id="archiveSearchInput" class="form-control search-input" placeholder="Search archived contributors...">
+                                <select id="archiveStatusFilter" class="form-control">
+                                    <option value="">All Statuses</option>
+                                    <option value="passed">Passed</option>
+                                    <option value="failed">Failed</option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="table-container">
+                            <table class="contributors-table">
+                                <thead>
+                                    <tr>
+                                        <th>Email</th>
+                                        <th>Result</th>
+                                        <th>Date Added</th>
+                                        <th>Date Completed</th>
+                                        <th>Date Archived</th>
+                                        <th>Actions</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="archiveTableBody">
+                                    <!-- Table rows will be populated by JavaScript -->
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
